<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            android:backgroundTint="@color/blue">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="74dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="-20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_menu"
                    app:tint="@color/white" />

                <TextView
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/company_name_bar"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16sp"
            android:layout_weight="1"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/heart" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/metropolis"
                android:text="@string/company_name"
                android:textColor="@color/red"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:fontFamily="@font/rokkitt"
                android:text="@string/company_phrase"
                android:textColor="@color/blue" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rokkitt"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/blue"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtUserDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@string/user_dni"
        android:background="@drawable/rect_edt_text"
        android:drawableStart="@drawable/ic_user"
        android:drawableTint="@color/blue"
        android:fontFamily="@font/robotoligth"
        android:maxLength="8"
        android:hint="@string/user_dni"
        android:inputType="number"
        android:padding="12dp" />

    <EditText
        android:id="@+id/edtUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@string/user_password"
        android:background="@drawable/rect_edt_text"
        android:drawableStart="@drawable/ic_password"
        android:drawableTint="@color/blue"
        android:fontFamily="@font/robotoligth"
        android:hint="@string/user_password"
        android:inputType="numberPassword"
        android:maxLength="8"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rect_button_black"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

    <Button
        android:textColor="@color/black"
        android:text="@string/user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rect_button_border" />

</LinearLayout>