<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackgroundBorderless">

    <ImageView
        android:id="@+id/item_schedule_photo"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/user_photo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/item_schedule_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_schedule_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/person_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_schedule_photo"
        app:layout_constraintTop_toTopOf="@+id/item_schedule_photo"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/item_schedule_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/description"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/item_schedule_call"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/item_schedule_photo"
        app:layout_constraintTop_toBottomOf="@+id/item_schedule_title"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/item_schedule_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:text="@string/content"
        app:layout_constraintEnd_toStartOf="@+id/item_schedule_call"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/item_schedule_photo"
        app:layout_constraintTop_toBottomOf="@+id/item_schedule_description"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/item_schedule_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/date"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/item_schedule_title"
        app:layout_constraintTop_toTopOf="@+id/item_schedule_title" />

    <ImageView
        android:id="@+id/item_schedule_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_schedule_date"
        app:srcCompat="@drawable/ic_phone"
        app:tint="@color/blue" />

</androidx.constraintlayout.widget.ConstraintLayout>