<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.IncomingCallScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/remoteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="14dp"
            android:text="@string/user_remote"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/callState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/call_incoming"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/app_name"
        android:padding="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center">

        <Button
            android:id="@+id/btnAnswer"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:background="@drawable/ic_answer" />

        <Button
            android:id="@+id/btnAnswerDeny"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_toEndOf="@+id/btnAnswer"
            android:background="@drawable/ic_answer_two" />

    </RelativeLayout>

</LinearLayout>