<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CallScreenActivity">

    <TextView
        android:id="@+id/remoteUserCallScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/person_name"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/callStateCallScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remoteUserCallScreen"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/calling"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/callDurationCallScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/callStateCallScreen"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/timer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dip">

        <LinearLayout
            android:id="@+id/remoteVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal" />

        <RelativeLayout
            android:id="@+id/localVideo"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="56dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/hangupButton"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:background="@drawable/ic_answer_two"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

</RelativeLayout>