<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgV_item_notification"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_heart" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardV_notification_mail"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtV_item_notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/robotoligth"
                android:text="@string/medical_appointment"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtV_item_notification_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/robotoligth"
                android:text="@string/medical_time"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/txt_item_notification_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/robotoligth"
                android:text="@string/time_day"
                android:textSize="10sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>